--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-body {
-  background: red;
+/* intitialize the display font Peace Sans
+
+@font-face {
+    font-family: 'peace_sansregular';
+    src: url('peace_sans-webfont.eot');
+    src: url('peace_sans-webfont.eot?#iefix') format('embedded-opentype'),
+         url('peace_sans-webfont.woff2') format('woff2'),
+         url('peace_sans-webfont.woff') format('woff'),
+         url('peace_sans-webfont.ttf') format('truetype'),
+         url('peace_sans-webfont.svg#peace_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+h1 {
+  font-family: 'peace_sansregular', helvetica, sans-serif;
 }
