Didn’t close the comment before.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* intitialize the display font Peace Sans
+/* intitialize the display font Peace Sans */
 
 @font-face {
     font-family: 'peace_sansregular';
