--- a/style.css
+++ b/style.css
@@ -1,21 +1,5 @@
-/* intitialize the display font Peace Sans */
-
-@font-face {
-    font-family: 'peace_sansregular';
-    src: url('fonts/peace_sans-webfont.eot');
-    src: url('fonts/peace_sans-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/peace_sans-webfont.woff2') format('woff2'),
-         url('fonts/peace_sans-webfont.woff') format('woff'),
-         url('fonts/peace_sans-webfont.ttf') format('truetype'),
-         url('fonts/peace_sans-webfont.svg#peace_sansregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 h1 {
-  font-family: 'peace_sansregular', helvetica, sans-serif;
-  font-weight: 400;
+  font-family: 'Mona Sans', helvetica, sans-serif;
 }
 
 .centered {
