--- a/style.css
+++ b/style.css
@@ -2,16 +2,13 @@ body {
   font-family: 'Mona Sans', helvetica, sans-serif;
 }
 
-p {
-  text-align: center;
-  font-weight: 600;
-  font-size: 2rem;
-  color: #aaa;
-}
-
 .centered {
     position: absolute;
     inset: 0;
     display: grid;
     place-content: center;
+}
+
+.centered p {
+  text-align: center;
 }
