--- a/style.css
+++ b/style.css
@@ -2,13 +2,6 @@ body {
   font-family: 'Mona Sans', helvetica, sans-serif;
 }
 
-p {
-  text-align: center;
-  font-weight: 600;
-  font-size: 2rem;
-  color: #aaa;
-}
-
 span {
   color: #689;
 }
@@ -20,4 +13,8 @@ span {
     place-content: center;
     place-items: center;
     gap: 2em;
+}
+
+.centered p {
+  text-align: center;
 }
