--- a/style.css
+++ b/style.css
@@ -22,14 +22,17 @@ span {
 .sign {
   font-family: 'Overpass', 'Mona Sans', helvetica, sans-serif;
   position: relative;
+  aspect-ratio: 1;
 }
 
 .sign::before {
   content: '';
   display: block;
   background-color: yellow;
+  border: 2px solid black;
   position: absolute;
   inset: 0;
   rotate: 45deg;
   scale: 2;
+  z-index: -1;
 }
