--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ span {
 
 .sign {
   font-family: 'Overpass', 'Mona Sans', helvetica, sans-serif;
+  font-weight: 700;
   position: relative;
   aspect-ratio: 1;
 }
@@ -30,6 +31,7 @@ span {
   display: block;
   background-color: yellow;
   border: 2px solid black;
+  border-radius: 0.75em;
   position: absolute;
   inset: 0;
   rotate: 45deg;
